ava-rs/tui/src/chatwidget/snapshots/ava_tui__chatwidget__tests__guardian_goal_continuation_drops_stale_reviews.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(rendered)
---
• Reviewing approval request (0s • esc to interrupt)
  └ rm -rf '/tmp/current-review'


› Ask Ava to do anything

  GPT-5.6-Sol default · /tmp/project
