ava-rs/tui/src/chatwidget/snapshots/ava_tui__chatwidget__tests__guardian_write_stdin_denied_history.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: lines_to_single_string(denial)
---
✗ Request denied for ava to send input to terminal 42: "confirm\n"
