ava-rs/tui/src/chatwidget/snapshots/ava_tui__chatwidget__tests__hook_runs_while_exec_active_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"exec running:\\n{exec_running}\\nexec and hook running:\\n{exec_and_hook_running}\\nhistory after exec:\\n{history_after_exec}\\nhook running after exec:\\n{hook_running_after_exec}\\nquiet hook completed:\\n{quiet_hook_completed}\")"
---
exec running:
• Running echo done

exec and hook running:
"                                                                                "
"• Running echo done                                                             "
"                                                                                "
"• Working (0s • esc to interrupt) · checking output policy                      "
"                                                                                "
"                                                                                "
"› Ask Ava to do anything                                                      "
"                                                                                "
"  GPT-5.6-Sol default · /tmp/project                                            "
history after exec:
• Ran echo done
  └ done

hook running after exec:
"                                                                                "
"• Working (0s • esc to interrupt) · checking output policy                      "
"                                                                                "
"                                                                                "
"› Ask Ava to do anything                                                      "
"                                                                                "
"  GPT-5.6-Sol default · /tmp/project                                            "
quiet hook completed:
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Ask Ava to do anything                                                      "
"                                                                                "
"  GPT-5.6-Sol default · /tmp/project                                            "
